# mabani

./: .env.example  .gitignore  Almabani Project Deployment Guide.md  DEPLOYMENT-BOQ.md  DEPLOYMENT.md  Dockerfile  GUIDE.md  LOCAL_DEV.md  MODULE_PATHS_FIXED.md  README-BOQ.md  README.md  USAGE_GUIDE.md  __init__.py  docker-compose.yml  env.example  guideline.md  out.json  out_list.json  package-lock.json  package.json  pyproject.toml  requirements.txt  resources.json  response.json  setup.py  stacks_central.json  stacks_west.json  test.py  test_query_preview.py  xlsx_20251201_044021
backend/: DEPLOYMENT.md  Dockerfile  Dockerfile.pricecode  README.md  cdk_migration_plan.md  chat_handler.py  debug_twilio.py  delete_handler.py  deploy-with-layers.sh  deploy.sh  deploy_robust.sh  deployment.config.sh  design_specification_safety_workflow.md  docker-compose.yml  implementation_plan_safety_workflow.md  local-server.sh  logs.json  package.json  postman-collection.json  pricecode_vector_worker.py  pricecode_worker.py  pyproject.toml  requirements.txt  serverless.yml  set_s3_cors.py  setup.py  test-events.json  test-kb-endpoints.sh  test-kb-quick.sh  worker.py
backend/almabani/cli/: main.py
backend/almabani/config/: settings.py
backend/almabani/core/: async_vector_store.py  embeddings.py  excel.py  storage.py  vector_store.py
backend/almabani/parsers/: excel_parser.py  hierarchy_processor.py
backend/almabani/pricecode/: __init__.py  indexer.py  indexer.py.bak  lexical_search.py  matcher.py  pipeline.py  prompts.py
backend/almabani/pricecode_vector/: indexer.py  matcher.py  pipeline.py
backend/almabani/rate_matcher/: matcher.py  pipeline.py
backend/app/: main.py
backend/app/templates/: error.html  settings.html
backend/docs/: CURRENT_ISSUES.md  safety_reporting_flow.md
backend/lambdas/: README.md  __init__.py  config_handler.py  file_processing.py  items.py  kb_documents.py  kb_indexing_worker.py  kb_query.py  knowledge_bases.py  report_processor.py  reports_handler.py  twilio_webhook.py  user_profile.py  workflow_worker.py
backend/lambdas/handlers/: confirmation_handler.py  data_collection_handlers.py  finalization_handler.py  project_handler.py  safety_check_handler.py  severity_handler.py  start_handler.py
backend/lambdas/shared/: bedrock_client.py  config_manager.py  conversation_state.py  document_processing.py  faiss_utils.py  kb_repositories.py  (+4 more)
backend/layers/: README.md  build-unified-layer.sh  sync-from-source.sh
backend/scripts/: migrate_to_s3vectors.py  migrate_vectors.py  populate_config_defaults.py
backend/temp_lambda_debug/: layer_url.txt
backend/tests/: .gitkeep  README.md  conftest.py  pytest.ini  test_twilio_webhook.py  verify_flow.py
(+282 files in other folders)
