[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almabani"
version = "2.0.0"
description = "BOQ Management and Rate Matching System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Almabani Team"}
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "pinecone>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[project.scripts]
almabani = "almabani.cli.main:app"

[tool.setuptools]
packages = ["almabani"]
