[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almabani"
version = "2.0.0"
description = "BOQ Management and Rate Matching System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Almabani Team"}
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0.0",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
almabani = "almabani.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["almabani*"]
